--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <title>particels effect</title>
         <meta charset="utf-8"/>
-        <link href="niceParticels.css" rel="stylesheet" type="text/css"/>
+        <link href="css/niceParticels.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <canvas id="canvas"></canvas>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js" integrity="sha512-UxP+UhJaGRWuMG2YC6LPWYpFQnsSgnor0VUF3BHdD83PS/pOpN+FYbZmrYN+ISX8jnvgVUciqP/fILOXDjZSwg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="niceParticels.js"></script>
+        <script src="js/niceParticels.js"></script>
     </body>
 </html>
